# LunaLua

./: .gitattributes  .gitignore  .gitmodules  AIRP_TODO.txt  AirpLunaDLL_Roadmap.txt  CMakeLists.txt  LunaDLL.pro  LunaDLL.vcxproj  LunaDLL.vcxproj.filters  LunaDll.sln  README.md  TODO.txt  Utils.txt  appveyor.yml  build-lunaexec.bat  build.bat  build_and_copy_to_host.bat  build_launcher_2017.bat  build_with_pause.bat  clear.bat  cmake-vs2015-32bit.bat  cmake-vs2017-32bit.bat  controlconfig.h  deploy-full.bat  deploy-launcher.bat  deploy.bat  indent.sh  resetdefines.txt
LunaDll/: AC_HeartSystem.cpp  AC_LunaControl.cpp  Animation.cpp  Animation.h  Autocode.cpp  Autocode.h  AutocodeManager.cpp  AutocodeManager.h  BMPBox.cpp  BMPBox.h  Blocks.cpp  Blocks.h  CGUI.h  CGUIContainer.h  CMakeLists.txt  CSprite.cpp  CSprite.h  CSpriteManager.cpp  CSpriteManager.h  CellManager.cpp  CellManager.h  Changelog.txt  CharacterData.cpp  CharacterData.h  DeathCounter.cpp  DeathCounter.h  DeathRecord.cpp  DeathRecord.h  Defines.h  Docopoper-AbstractAssault.lvl.cpp  Docopoper-Calleoca.cpp  Docopoper-TheFloorisLava.lvl..cpp  EnumCmd.cpp  EuroShellRandD.lvl.cpp  EventStateMachine.cpp  EventStateMachine.h  FeatureJSONResource.txt  GameboyRPG.h  GenComp.cpp  GlobalFuncs.cpp  (+86 more)
LunaDll/Animation/: Animation.h
LunaDll/Autocode/: Autocode.cpp  Autocode.h  AutocodeManager.cpp  AutocodeManager.h
LunaDll/Autocode/Commands/: AC_HeartSystem.cpp  AC_LunaControl.cpp  EnumCmd.cpp  GenComp.cpp
LunaDll/Blocks/: Blocks.h
LunaDll/CellManager/: CellManager.cpp  CellManager.h
LunaDll/CustomSprites/: CSprite.cpp  CSprite.h  CSpriteManager.cpp  CSpriteManager.h  SpriteComponent.cpp  SpriteComponent.h
LunaDll/CustomSprites/Hitbox/: Hitbox.cpp  Hitbox.h
LunaDll/CustomSprites/SpritesFuncs/: SpriteBehaviorFuncs.cpp  SpriteDrawFuncs.cpp  SpriteFuncs.h
LunaDll/DeathCounter/: DeathCounter.cpp  DeathCounter.h  DeathRecord.cpp  DeathRecord.h
LunaDll/FileManager/: CustomParamStore.cpp  CustomParamStore.h  LoadFile_Level.cpp  LoadFile_Save.h  LoadFile_World.cpp  SMBXFileManager.cpp  SMBXFileManager.h  SaveFile.cpp  SaveFile.h  config_manager.cpp  config_manager.h
LunaDll/GameConfig/: GameAutostart.cpp  GameAutostart.h  GameConfiguration.cpp  GameConfiguration.h  GeneralLunaConfig.cpp  GeneralLunaConfig.h
LunaDll/HardcodedGraphics/: HardcodedGraphicsManager.cpp  HardcodedGraphicsManager.h  HardocodeGFXMap.cpp
LunaDll/IPC/: IPCPipeServer.cpp  IPCPipeServer.h
LunaDll/Input/: Input.cpp  Input.h  LunaGameController.cpp  LunaGameController.h  MouseHandler.cpp  MouseHandler.h
LunaDll/Keyboard/: Keyboard.cpp  Keyboard.h
LunaDll/Layer/: Layer.cpp  Layer.h
LunaDll/Level/: Level.cpp
LunaDll/LevelCodes/: Docopoper-AbstractAssault.lvl.cpp  Docopoper-Calleoca.cpp  Docopoper-TheFloorisLava.lvl..cpp  EuroShellRandD.lvl.cpp  JosephStaleknight-CurtainTortoise.lvl.cpp  Kil-DemosBrain.cpp  KilArmoryCode.cpp  LevelCodes.h  SAJewers-QraestoliaCaverns.lvl.cpp  SAJewers-Snowboardin.cpp  Talkhaus-Science_Final_Battle.cpp  dlltestlvlCode.cpp
LunaDll/Logging/: Logger.cpp  Logging.h
LunaDll/LuaMain/: LuaEvents.cpp  LuaEvents.h  LuaHelper.cpp  LuaHelper.h  LuaProxy.cpp  LuaProxy.h  LuaProxyFFI.cpp  LuaProxyFFIGraphics.cpp  LuaProxyFFIGraphics.h  LuaSharedProxy.cpp  LuaSharedProxy.h  LuabindIncludes.h  LunaLuaMain.cpp  LunaLuaMain.h  LunaPathValidator.cpp  LunaPathValidator.h
LunaDll/LuaMain/LuaProxyComponent/: LuaProxyAnimation.cpp  LuaProxyAsyncHTTPRequest.cpp  LuaProxyAudio.cpp  (+28 more)
LunaDll/MOBs/: NPCs.cpp  NPCs.h  PlayerMOB.cpp  PlayerMOB.h
LunaDll/MciEmulator/: mciEmulator.cpp  mciEmulator.h
LunaDll/Minigames/: GameboyRPG.cpp  GameboyRPG.h  Minigames.cpp  Minigames.h
LunaDll/Misc/: AsmPatch.cpp  AsmPatch.h  AsyncHTTPClient.cpp  AsyncHTTPClient.h  BitBltEmulation.cpp  CollisionMatrix.cpp  CollisionMatrix.h  ErrorReporter.cpp  ErrorReporter.h  Gameover.cpp  HardcodedGraphicsAccess.h  LoadScreen.cpp  LoadScreen.h  MiscFuncs.cpp  MiscFuncs.h  NpcIdExtender.cpp  NpcIdExtender.h  PGEEditorCmdSender.cpp  PGEEditorCmdSender.h  PerfTracker.cpp  PerfTracker.h  Playground.cpp  Playground.h  ResourceFileMapper.cpp  ResourceFileMapper.h  RunningStat.h  RuntimeHook.cpp  RuntimeHook.h  SHMemServer.cpp  SHMemServer.h  SMBXFileManager.cpp  SMBXFileManager.h  SRect.h  SafeFPUControl.cpp  SafeFPUControl.h  SaveData.cpp  SaveData.h  TestMode.cpp  TestMode.h  TestModeMenu.cpp  (+25 more)
LunaDll/Rendering/: AsyncGifRecorder.cpp  AsyncGifRecorder.h  AsyncGifRecorderImgs.h  BMPBox.cpp  BMPBox.h  BitBltEmulation.cpp  BitBltEmulation.h  FrameCapture.cpp  FrameCapture.h  GLCompat.h  GLContextManager.cpp  GLContextManager.h  GLDraw.cpp  GLDraw.h  GLEngine.cpp  GLEngine.h  GLEngineCmds.cpp  GLEngineCmds.h  GLEngineProxy.cpp  GLEngineProxy.h  GLInitTest.cpp  GLSplitSprite.h  GLSprite.cpp  GLSprite.h  GLTextureStore.cpp  GLTextureStore.h  ImageLoader.cpp  ImageLoader.h  LunaImage.cpp  LunaImage.h  RenderOverrideManager.cpp  RenderOverrideManager.h  RenderOverrides.cpp  RenderOverrides.h  RenderString.h  RenderUtils.cpp  RenderUtils.h  Rendering.cpp  Rendering.h  SMBXImageCategories.h  (+4 more)
LunaDll/SMBXInternal/: Animation.cpp  Animation.h  BGOs.h  BaseItemArray.h  Blocks.cpp  Blocks.h  CameraInfo.h  CollectedStarRecord.h  CustomGraphics.cpp  CustomGraphics.h  Functions.h  HardcodedGraphicsAccess.cpp  HardcodedGraphicsAccess.h  Keyboard.cpp  Keyboard.h  Layer.cpp  Layer.h  Level.cpp  Level.h  Menu.h  Musicbox.h  NPCs.cpp  NPCs.h  NativeInput.h  Overworld.cpp  Overworld.h  Path.h  PlayerMOB.cpp  PlayerMOB.h  Ports.h  SMBXEvents.cpp  SMBXEvents.h  Scenery.h  Sound.cpp  Sound.h  Tile.h  Types.h  Variables.h  Warp.h  Water.h  (+3 more)
LunaDll/SMBX_Events/: SMBXEvent.cpp  SMBXEvents.h
LunaDll/SdlMusic/: MusicDefList.cpp  MusicManager.cpp  MusicManager.h  SdlMusPlayer.cpp  SdlMusPlayer.h
LunaDll/Sound/: Sound.h
LunaDll/UserSaves/: UserSaving.cpp  UserSaving.h
LunaDll/Utils/: EncodeUtils.cpp  EncodeUtils.h  StringUtils.cpp  StringUtils.h
LunaDll/World/: Overworld.cpp  Overworld.h
LunaDll/libs/: update_mixer_x.cmd
test/extra-settings/: CMakeLists.txt  lles-test.cpp
(+597 files in other folders)
